--- a/frontend-restaurante/src/app/pages/clientes-list/clientes-list.html
+++ b/frontend-restaurante/src/app/pages/clientes-list/clientes-list.html
@@ -7,15 +7,28 @@
             </div>
         </ng-template>
         <ng-template pTemplate="header">
-            <tr><th>Nome</th><th>CPF</th></tr>
+            <tr>
+              <th>Nome</th>
+              <th>CPF</th>
+              <th style="width:8rem">Ações</th>
+            </tr>
         </ng-template>
         <ng-template pTemplate="body" let-cliente>
-            <tr><td>{{cliente.nome}}</td><td>{{cliente.cpf}}</td></tr>
+            <tr>
+              <td>{{cliente.nome}}</td>
+              <td>{{cliente.cpf}}</td>
+              <td>
+                <button pButton type="button" icon="pi pi-pencil" class="p-button-rounded p-button-text" (click)="abrirDialogEditarCliente(cliente)"></button>
+                <button pButton type="button" icon="pi pi-trash" class="p-button-rounded p-button-text p-button-danger" (click)="excluirCliente(cliente)"></button>
+              </td>
+            </tr>
         </ng-template>
     </p-table>
 </div>
 
-<p-dialog header="Novo Cliente" [(visible)]="displayDialog" [modal]="true" [style]="{width: '50vw'}" [draggable]="false" [resizable]="false">
+<p-confirmDialog></p-confirmDialog>
+
+<p-dialog [header]="clienteSelecionado ? 'Editar Cliente' : 'Novo Cliente'" [(visible)]="displayDialog" [modal]="true" [style]="{width: '50vw'}">
     <form [formGroup]="clienteForm">
         <div class="field">
             <label for="nome">Nome</label>
