--- a/frontend-restaurante/src/app/pages/pratos-list/pratos-list.html
+++ b/frontend-restaurante/src/app/pages/pratos-list/pratos-list.html
@@ -7,28 +7,36 @@
           </div>
       </ng-template>
       <ng-template pTemplate="header">
-          <tr><th>Nome</th><th>Descrição</th><th style="width:10rem">Preço</th></tr>
+          <tr>
+            <th>Nome</th>
+            <th>Descrição</th>
+            <th style="width:10rem">Preço</th>
+            <th style="width:8rem">Ações</th> 
+          </tr>
       </ng-template>
       <ng-template pTemplate="body" let-prato>
-          <tr><td>{{prato.nome}}</td><td>{{prato.descricao}}</td><td>{{prato.preco | currency:'BRL'}}</td></tr>
+          <tr>
+            <td>{{prato.nome}}</td>
+            <td>{{prato.descricao}}</td>
+            <td>{{prato.preco | currency:'BRL'}}</td>
+            <td>
+              <!-- Botão de Editar -->
+              <button pButton type="button" icon="pi pi-pencil" class="p-button-rounded p-button-text" (click)="abrirDialogEditarPrato(prato)"></button>
+              <!-- NOVO: Botão de Excluir -->
+              <button pButton type="button" icon="pi pi-trash" class="p-button-rounded p-button-text p-button-danger" (click)="excluirPrato(prato)"></button>
+            </td>
+          </tr>
       </ng-template>
   </p-table>
 </div>
 
-<p-dialog header="Novo Prato" [(visible)]="displayDialog" [modal]="true" [style]="{width: '50vw'}" [draggable]="false" [resizable]="false">
+<p-confirmDialog></p-confirmDialog>
+
+<p-dialog [header]="pratoSelecionado ? 'Editar Prato' : 'Novo Prato'" [(visible)]="displayDialog" [modal]="true" [style]="{width: '50vw'}">
   <form [formGroup]="pratoForm">
-      <div class="field">
-          <label for="nome">Nome</label>
-          <input type="text" pInputText formControlName="nome" class="w-full" />
-      </div>
-      <div class="field">
-          <label for="descricao">Descrição</label>
-          <textarea rows="3" pInputTextarea formControlName="descricao" class="w-full"></textarea>
-      </div>
-      <div class="field">
-          <label for="preco">Preço</label>
-          <p-inputNumber formControlName="preco" mode="currency" currency="BRL" locale="pt-BR"></p-inputNumber>
-      </div>
+      <div class="field"><label for="nome">Nome</label><input type="text" pInputText formControlName="nome" class="w-full" /></div>
+      <div class="field"><label for="descricao">Descrição</label><textarea rows="3" formControlName="descricao" class="p-inputtextarea p-inputtext p-component p-element w-full"></textarea></div>
+      <div class="field"><label for="preco">Preço</label><p-inputNumber formControlName="preco" mode="currency" currency="BRL" locale="pt-BR"></p-inputNumber></div>
   </form>
   <ng-template pTemplate="footer">
       <p-button label="Cancelar" icon="pi pi-times" (click)="displayDialog=false" styleClass="p-button-text"></p-button>
